# visual_mapping_localization

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Demo/: localization.cpp
inc/: bundle_adjustment.h  camera.h  detection.h  frame.h  map_point.h  map_save.h  mapping.h  matcher.h  triangulation.h  visualization.h
scripts/: rosbag2tum.py
src/: bundle_adjustment.cpp  camera.cpp  detection.cpp  frame.cpp  map_point.cpp  map_save.cpp  mapping.cpp  matcher.cpp  triangulation.cpp  visualization.cpp
